unpackaged/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <description>Objet utilisé pour recueillir les devis SAP CPQ</description>
    <label>Devis SAP CPQ</label>
    <nameField>
        <label>Numéro du devis</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devis SAP CPQ</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>