unpackaged/main/default/objects/Quote__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Compte associé au devis</description>
    <inlineHelpText>Compte Payeur</inlineHelpText>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Devis</relationshipLabel>
    <relationshipName>Devis</relationshipName>
    <type>Lookup</type>
</CustomField>