unpackaged/main/default/objects/Quote__c/fields/Carnet_de_commande_HT__c.field-meta.xml
<CustomField>
    <fullName>Carnet_de_commande_HT__c</fullName>
    <label>Carnet de commande HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>