unpackaged/main/default/objects/Quote__c/fields/Date_de_validite_du_devis__c.field-meta.xml
<CustomField>
    <fullName>Date_de_validite_du_devis__c</fullName>
    <label>Date de validité du devis</label>
    <type>Date</type>
</CustomField>