unpackaged/main/default/objects/Quote__c/fields/Derogation_accord_V_grade_insuffissant__c.field-meta.xml
<CustomField>
    <fullName>Derogation_accord_V_grade_insuffissant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dérogation pour accord Véhicule neuf malgré un grade insuffisant</description>
    <label>Dérogation accord V grade insuffissant</label>
    <type>Checkbox</type>
</CustomField>