unpackaged/main/default/objects/Quote__c/fields/Derogation_Demande_agrement__c.field-meta.xml
<CustomField>
    <fullName>Derogation_Demande_agrement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dérogation Demande d’agrément</label>
    <type>Checkbox</type>
</CustomField>