unpackaged/main/default/objects/Quote__c/fields/Derogation_depassement_limite_credit__c.field-meta.xml
<CustomField>
    <fullName>Derogation_depassement_limite_credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dérogation dépassement de la limite de crédit</description>
    <label>Dérogation dépassement limite crédit</label>
    <type>Checkbox</type>
</CustomField>