unpackaged/main/default/objects/Quote__c/fields/Derogation_retard_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>Derogation_retard_de_paiement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dérogation retard de paiement</description>
    <label>Dérogation retard de paiement</label>
    <type>Checkbox</type>
</CustomField>