unpackaged/main/default/objects/Quote__c/fields/Derogation_statut_compte__c.field-meta.xml
<CustomField>
    <fullName>Derogation_statut_compte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dérogation sur le statut du compte client</description>
    <label>Dérogation statut compte</label>
    <type>Checkbox</type>
</CustomField>