unpackaged/main/default/objects/Quote__c/fields/Justification_motif_de_remise__c.field-meta.xml
<CustomField>
    <fullName>Justification_motif_de_remise__c</fullName>
    <label>Justification motif de remise</label>
    <length>30</length>
    <type>Text</type>
</CustomField>