unpackaged/main/default/objects/Quote__c/fields/Loyer_forfaitaire_mensuel__c.field-meta.xml
<CustomField>
    <fullName>Loyer_forfaitaire_mensuel__c</fullName>
    <label>Loyer forfaitaire mensuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>