unpackaged/main/default/objects/Quote__c/fields/Loyer_total_p_riodique_HT_service_presta__c.field-meta.xml
<CustomField>
    <fullName>Loyer_total_p_riodique_HT_service_presta__c</fullName>
    <label>Loyer total périodique HT service/presta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>