unpackaged/main/default/objects/Quote__c/fields/Motif_de_refus__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_refus__c</fullName>
    <label>Motif de refus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agence trop éloignée</fullName>
            </value>
            <value>
                <fullName>Aucun potentiel</fullName>
            </value>
            <value>
                <fullName>Client injoignable</fullName>
            </value>
            <value>
                <fullName>Conditions de location non retenues</fullName>
            </value>
            <value>
                <fullName>Conditions de location nor tenues</fullName>
            </value>
            <value>
                <fullName>Délai de réponse trop important</fullName>
            </value>
            <value>
                <fullName>Echu</fullName>
            </value>
            <value>
                <fullName>Etude Hors standard refusée</fullName>
            </value>
            <value>
                <fullName>Montant de la caution trop élevé</fullName>
            </value>
            <value>
                <fullName>Prix de location trop élevé</fullName>
            </value>
            <value>
                <fullName>Produit non disponible en stock</fullName>
            </value>
            <value>
                <fullName>Projet du client annulé ou reporté</fullName>
            </value>
            <value>
                <fullName>Prospect écarté pour raisons financières</fullName>
            </value>
            <value>
                <fullName>Solution alternative sans frais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>