unpackaged/main/default/objects/Quote__c/fields/Motif_de_remise__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_remise__c</fullName>
    <label>Motif de remise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Geste Commercial</fullName>
            </value>
            <value>
                <fullName>Concurrence</fullName>
            </value>
            <value>
                <fullName>Erreur catégorie</fullName>
            </value>
            <value>
                <fullName>Grand compte</fullName>
            </value>
            <value>
                <fullName>Saison basse</fullName>
            </value>
            <value>
                <fullName>Personnel PF</fullName>
            </value>
            <value>
                <fullName>Véhicule hors catégorie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>