unpackaged/main/default/objects/Quote__c/fields/N_version_du_devis__c.field-meta.xml
<CustomField>
    <fullName>N_version_du_devis__c</fullName>
    <label>N° version du devis</label>
    <length>5</length>
    <type>Text</type>
</CustomField>