unpackaged/main/default/objects/Quote__c/fields/OwnerID__c.field-meta.xml
<CustomField>
    <fullName>OwnerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Devis_SAP_CPQ</relationshipName>
    <type>Lookup</type>
</CustomField>