unpackaged/main/default/objects/Quote__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <formula>text(Account__r.Pays__c)</formula>
    <label>Pays</label>
    <type>Text</type>
</CustomField>