unpackaged/main/default/objects/Quote__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Devis déclaré comme principal</description>
    <label>Principal</label>
    <type>Checkbox</type>
</CustomField>