unpackaged/main/default/objects/Quote__c/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <label>Quote_ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>