unpackaged/main/default/objects/Quote__c/fields/Quote_Validity_Notification_Before_7_Day__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity_Notification_Before_7_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Validity Notification Before 7 Day</label>
    <type>Checkbox</type>
</CustomField>