unpackaged/main/default/objects/Quote__c/fields/Quote_Validity_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Validity Notification</label>
    <type>Checkbox</type>
</CustomField>