unpackaged/main/default/objects/Quote__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
            </value>
            <value>
                <fullName>En attente approbation</fullName>
            </value>
            <value>
                <fullName>Autorisé</fullName>
            </value>
            <value>
                <fullName>Non Autorisé</fullName>
            </value>
            <value>
                <fullName>Devis Envoyé</fullName>
            </value>
            <value>
                <fullName>Devis annulé</fullName>
            </value>
            <value>
                <fullName>Devis refusé</fullName>
            </value>
            <value>
                <fullName>Devis validé</fullName>
            </value>
            <value>
                <fullName>Contrat envoyé</fullName>
            </value>
            <value>
                <fullName>Contrat signé</fullName>
            </value>
            <value>
                <fullName>Contrat validé</fullName>
            </value>
            <value>
                <fullName>Devis échu</fullName>
            </value>
            <value>
                <fullName>Brouillon - étude HS en cours</fullName>
            </value>
            <value>
                <fullName>Brouillon - étude HS validée</fullName>
            </value>
            <value>
                <fullName>Création de contrat en cours</fullName>
            </value>
            <value>
                <fullName>Echec de la création du contrat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>