unpackaged/main/default/objects/Quote__c/fields/Utilisateur_en_attente_d_approbation__c.field-meta.xml
<CustomField>
    <fullName>Utilisateur_en_attente_d_approbation__c</fullName>
    <label>Utilisateur en attente d&#39;approbation</label>
    <length>250</length>
    <type>Text</type>
</CustomField>