unpackaged/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>N_version_du_devis__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Primary__c</columns>
    <columns>Statut__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>