unpackaged/main/default/objects/Quote__c/listViews/CTRL_TARIF.listView-meta.xml
<ListView>
    <fullName>CTRL_TARIF</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Brouillon - étude HS en cours</value>
    </filters>
    <label>CTRL TARIF</label>
</ListView>