unpackaged/main/default/objects/Quote__c/listViews/Dero_Devis_en_attente_d_approbation.listView-meta.xml
<ListView>
    <fullName>Dero_Devis_en_attente_d_approbation</fullName>
    <columns>NAME</columns>
    <columns>N_version_du_devis__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>En attente approbation</value>
    </filters>
    <label>Déro - Devis en attente d&#39;approbation</label>
</ListView>