unpackaged/main/default/objects/Quote__c/listViews/Devis_Valider.listView-meta.xml
<ListView>
    <fullName>Devis_Valider</fullName>
    <booleanFilter>1 AND( 2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>N_version_du_devis__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Statut__c</columns>
    <columns>Commentaire__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Contrat signé</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>LD</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>Longue Durée</value>
    </filters>
    <label>Contrats à Valider</label>
</ListView>